# simcity-tui

./: .gitignore  Makefile  README.md  demo.tape  pyproject.toml  pyrightconfig.json  simcity.py
micropolis_tui/: agent_api.py  app.py  engine.py  music.py  screens.py  sounds.py  tiles.py  tui.tcss
screenshots/: README.md
simcity_tui/: __init__.py  advisor.py  agent_api.py  app.py  music.py  screens.py  sounds.py  tiles.py
simcity_tui/assets/music/: CREDITS.md
tests/: api_qa.py  perf.py  play.py  qa.py  sound_test.py
