[project]
name = "simcity-tui"
version = "0.1.0"
description = "Terminal-native SimCity (Micropolis) front-end"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80",
    "aiohttp>=3.9",
    "anthropic>=0.34",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["simcity_tui"]
