[project]
name = "micropolis-tui"
version = "0.1.0"
description = "Terminal-native SimCity (Micropolis) front-end"
requires-python = ">=3.10"
dependencies = [
    # Textual 9+ may change the Widget._render() contract in ways we rely
    # on (see issue #2). Cap at major version until we've re-verified.
    "textual>=0.80,<10",
    "aiohttp>=3.9",
    "anthropic>=0.34",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["micropolis_tui"]

# Bundle the chiptune loop + credits inside the package so
# `pip install` delivers the game fully self-contained — no separate
# asset-download step.
[tool.setuptools.package-data]
micropolis_tui = ["tui.tcss", "assets/music/*.mp3", "assets/music/CREDITS.md"]
